--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
     - name: Login to Heroku Container registry
       run: heroku container:login
     - name: Build and push
-      run: heroku container:push -a minstagram-beta web
+      run: heroku container:push -a pagegarden web
     - name: Release
-      run: heroku container:release -a minstagram-beta web
+      run: heroku container:release -a pagegarden web
